Bug 412211 ? fix downgrade code so that when downgrade from schema version 7+ back to 6+, we don't re-import bookmarks.html (r=sspitzer, a=schrep)